Fix position of the E2E icon of expanding sessions button
To prevent the icon from moving down a little bit

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_UserInfo.scss
+++ b/res/css/views/right_panel/_UserInfo.scss
@@ -276,6 +276,7 @@ limitations under the License.
         .mx_UserInfo_expand {
             column-gap: 5px; // cf: mx_UserInfo_device_name
             margin-bottom: 11px;
+            align-items: initial; // Cancel the default property
         }
     }
 
