Factor RoomInfoLine out of SpaceRoomView

--- a/res/css/_components.scss
+++ b/res/css/_components.scss
@@ -255,6 +255,7 @@
 @import "./views/rooms/_ReplyTile.scss";
 @import "./views/rooms/_RoomBreadcrumbs.scss";
 @import "./views/rooms/_RoomHeader.scss";
+@import "./views/rooms/_RoomInfoLine.scss";
 @import "./views/rooms/_RoomList.scss";
 @import "./views/rooms/_RoomListHeader.scss";
 @import "./views/rooms/_RoomPreviewBar.scss";
