Factor RoomPreviewCard out of SpaceRoomView

--- a/res/css/_components.scss
+++ b/res/css/_components.scss
@@ -259,6 +259,7 @@
 @import "./views/rooms/_RoomList.scss";
 @import "./views/rooms/_RoomListHeader.scss";
 @import "./views/rooms/_RoomPreviewBar.scss";
+@import "./views/rooms/_RoomPreviewCard.scss";
 @import "./views/rooms/_RoomSublist.scss";
 @import "./views/rooms/_RoomTile.scss";
 @import "./views/rooms/_RoomUpgradeWarningBar.scss";
