--- a/res/css/views/rooms/_RoomPreviewCard.scss
+++ b/res/css/views/rooms/_RoomPreviewCard.scss
@@ -15,7 +15,7 @@ limitations under the License.
 */
 
 .mx_RoomPreviewCard {
-    padding: $spacing-32 $spacing-24 !important; // override default padding from above
+    padding: $spacing-32 $spacing-24 !important; // Override SpaceRoomView's default padding
     margin: auto;
     flex-grow: 1;
     max-width: 480px;
@@ -115,7 +115,7 @@ limitations under the License.
     }
 
     h1.mx_RoomPreviewCard_name {
-        margin: $spacing-16 0 !important; // override default margin from above
+        margin: $spacing-16 0 !important; // Override SpaceRoomView's default margins
     }
 
     .mx_RoomPreviewCard_topic {
