--- a/res/css/views/elements/_RichText.scss
+++ b/res/css/views/elements/_RichText.scss
@@ -35,3 +35,10 @@
 .mx_Markdown_STRIKETHROUGH {
     text-decoration: line-through;
 }
+
+.mx_Emoji {
+    // Should be 1.8rem for our default message bodies, and scale with the
+    // surrounding text
+    font-size: max(1.8rem, 1em);
+    vertical-align: bottom;
+}
