Use font variable

--- a/res/css/views/elements/_RichText.scss
+++ b/res/css/views/elements/_RichText.scss
@@ -39,6 +39,6 @@
 .mx_Emoji {
     // Should be 1.8rem for our default message bodies, and scale with the
     // surrounding text
-    font-size: max(1.8rem, 1em);
+    font-size: max($font-18px, 1em);
     vertical-align: bottom;
 }
