--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -319,20 +319,71 @@ limitations under the License.
     mask-image: url('$(res)/img/voip/tab-dialpad.svg');
 }
 
-.mx_InviteDialog_inviterErrorTile,
-.mx_InviteDialog_roomTile {
+.mx_InviteDialog_tile {
     cursor: pointer;
     padding: $spacing-4 $spacing-8;
     display: grid;
     gap: $spacing-8 $spacing-12;
     align-items: center;
 
+    &.mx_InviteDialog_tile--room {
+        grid-template-columns: min-content auto auto; // mx_InviteDialog_tile_avatarStack, mx_InviteDialog_tile_nameStack, time
+
+        &:hover {
+            background-color: $header-panel-bg-color;
+            border-radius: 4px;
+        }
+
+        .mx_InviteDialog_tile--room_selected {
+            border-radius: 36px;
+            background-color: $username-variant1-color;
+
+            &::before {
+                content: "";
+                width: 24px;
+                height: 24px;
+                grid-column: 1;
+                grid-row: 1;
+                mask-image: url("$(res)/img/feather-customised/check.svg");
+                mask-size: 100%;
+                mask-repeat: no-repeat;
+                position: absolute;
+                top: 6px; // 50%
+                left: 6px; // 50%
+                background-color: #ffffff; // this is fine without a var because it's for both themes
+            }
+        }
+
+        .mx_InviteDialog_tile--room_time {
+            margin-inline-start: auto;
+            width: max-content;
+            font-size: $font-12px;
+            color: $muted-fg-color;
+        }
+
+        .mx_InviteDialog_tile--room_highlight {
+            font-weight: 900;
+        }
+    }
+
+    &.mx_InviteDialog_tile--inviterError {
+        grid-template-columns: max-content auto; // max-content = avatar width
+        margin-bottom: $spacing-24;
+
+        .mx_InviteDialog_tile--inviterError_errorText {
+            grid-row-start: 2;
+            grid-column-start: 2;
+            font-size: $font-15px;
+            color: $alert;
+        }
+    }
+
     * {
         vertical-align: middle;
     }
 
     .mx_InviteDialog_tile_avatarStack,
-    .mx_InviteDialog_roomTile_selected {
+    .mx_InviteDialog_tile--room_selected {
         width: 36px;
         height: 36px;
         display: inline-block;
@@ -383,64 +434,12 @@ limitations under the License.
     }
 }
 
-.mx_InviteDialog_roomTile {
-    grid-template-columns: min-content auto auto; // mx_InviteDialog_tile_avatarStack, mx_InviteDialog_tile_nameStack, time
-
-    &:hover {
-        background-color: $header-panel-bg-color;
-        border-radius: 4px;
-    }
-
-    .mx_InviteDialog_roomTile_selected {
-        border-radius: 36px;
-        background-color: $username-variant1-color;
-
-        &::before {
-            content: "";
-            width: 24px;
-            height: 24px;
-            grid-column: 1;
-            grid-row: 1;
-            mask-image: url("$(res)/img/feather-customised/check.svg");
-            mask-size: 100%;
-            mask-repeat: no-repeat;
-            position: absolute;
-            top: 6px; // 50%
-            left: 6px; // 50%
-            background-color: #ffffff; // this is fine without a var because it's for both themes
-        }
-    }
-
-    .mx_InviteDialog_roomTile_time {
-        margin-inline-start: auto;
-        width: max-content;
-        font-size: $font-12px;
-        color: $muted-fg-color;
-    }
-
-    .mx_InviteDialog_roomTile_highlight {
-        font-weight: 900;
-    }
-}
-
 .mx_InviteDialog_multiInviterError {
     > h4 {
         font-size: $font-15px;
         line-height: $font-24px;
         color: $secondary-content;
         font-weight: normal;
-    }
-
-    .mx_InviteDialog_inviterErrorTile {
-        grid-template-columns: max-content auto; // max-content = avatar width
-        margin-bottom: $spacing-24;
-
-        .mx_InviteDialog_inviterErrorTile_errorText {
-            grid-row-start: 2;
-            grid-column-start: 2;
-            font-size: $font-15px;
-            color: $alert;
-        }
     }
 }
 
