read receipts: improve alignment of expand/collapse button

--- a/res/css/views/elements/_GenericEventListSummary.scss
+++ b/res/css/views/elements/_GenericEventListSummary.scss
@@ -66,6 +66,8 @@ limitations under the License.
     color: $accent;
     cursor: pointer;
     font-size: $font-14px;
+    align-self: start;
+    line-height: $font-23px;
 }
 
 .mx_GenericEventListSummary_options {
