--- a/res/css/views/auth/_AuthBody.scss
+++ b/res/css/views/auth/_AuthBody.scss
@@ -24,6 +24,11 @@ limitations under the License.
     padding: 25px 60px;
     box-sizing: border-box;
 
+    &.mx_AuthBody_flex {
+        display: flex;
+        flex-direction: column;
+    }
+
     h2 {
         font-size: $font-24px;
         font-weight: 600;
