--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -93,6 +93,11 @@ limitations under the License.
             margin-right: 2px;
         }
 
+        .mx_EventTile_line {
+            padding-top: var(--BaseCard_EventTile_line-padding-block);
+            padding-bottom: var(--BaseCard_EventTile_line-padding-block);
+        }
+
         &.mx_EventTile_info {
             .mx_EventTile_line {
                 padding-left: $left-gutter;
@@ -108,10 +113,6 @@ limitations under the License.
         .mx_EventTile {
             > .mx_DisambiguatedProfile {
                 margin-left: 36px;
-            }
-
-            .mx_EventTile_line {
-                padding-bottom: 8px;
             }
         }
     }
