Hide the verification left stroke only in the thread panel (ie. let it shown in a chat panel with a maximized widget)
Respect the original comment that the stroke should be hidden in the thread list (and in a thread as well).

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -201,7 +201,7 @@ limitations under the License.
         }
 
         &:hover .mx_EventTile_line {
-            box-shadow: unset !important; // don't show the verification left stroke in the thread list
+            box-shadow: inherit; // let the verification left stroke shown in the chat panel with a maximized widget
         }
     }
 
