Move line-height of .mx_EventTile_line from _GroupLayout.scss to _EventTile.scss
Specifying mx_EventTile_line's line-height in mx_GroupLayout is too strong for mx_GenericEventListSummary.

- Set line-height:1 to mx_RedactedBody inside mx_GenericEventListSummary on IRC/modern layout

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_GroupLayout.scss
+++ b/res/css/views/rooms/_GroupLayout.scss
@@ -33,9 +33,13 @@ $left-gutter: 64px;
             position: absolute; // for modern layout
         }
 
-        .mx_EventTile_line, .mx_EventTile_reply {
+        .mx_EventTile_line,
+        .mx_EventTile_reply {
             padding-top: 1px;
             padding-bottom: 3px;
+        }
+
+        .mx_EventTile_reply {
             line-height: $font-22px;
         }
     }
