--- a/res/css/views/dialogs/_CompoundDialog.scss
+++ b/res/css/views/dialogs/_CompoundDialog.scss
@@ -77,6 +77,8 @@ limitations under the License.
     }
 
     .mx_CompoundDialog_footer {
+        position: sticky;
+        background-color: $background;
         box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.05); // hardcoded colour for both themes
     }
 }
