--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -53,7 +53,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 
     &[data-layout=group] {
         .mx_EventTile_line {
-            line-height: $font-22px; // See: mx_EventTile_reply on _GroupLayout.scss
+            line-height: var(--GroupLayout-EventTile-line-height);
         }
     }
 }
