--- a/res/css/views/rooms/_GroupLayout.scss
+++ b/res/css/views/rooms/_GroupLayout.scss
@@ -18,6 +18,8 @@ limitations under the License.
 $left-gutter: 64px;
 
 .mx_GroupLayout {
+    --GroupLayout-EventTile-line-height: $font-22px;
+
     .mx_EventTile {
         > .mx_DisambiguatedProfile {
             line-height: $font-20px;
@@ -40,7 +42,7 @@ $left-gutter: 64px;
         }
 
         .mx_EventTile_reply {
-            line-height: $font-22px;
+            line-height: var(--GroupLayout-EventTile-line-height);
         }
     }
 }
