--- a/res/css/views/rooms/_EditMessageComposer.scss
+++ b/res/css/views/rooms/_EditMessageComposer.scss
@@ -21,7 +21,7 @@ limitations under the License.
     // this is to try not make the text move but still have some
     // padding around and in the editor.
     // Actual values from fiddling around in inspector
-    margin: -7px -10px -5px -10px;
+    margin: calc(-1 * var(--EditMessageComposer-margin-top)) -10px -5px -10px;
     overflow: visible !important;   // override mx_EventTile_content
 
     .mx_BasicMessageComposer_input {
