--- a/res/css/views/elements/_Pill.scss
+++ b/res/css/views/elements/_Pill.scss
@@ -47,7 +47,7 @@ limitations under the License.
     }
 
     .mx_BaseAvatar {
-        margin-left: -0.3em; // Otherwise the gap is too small
+        margin-left: -0.3em; // Otherwise the gap is too large
         position: relative;
         display: inline-flex;
         align-items: center;
