--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -723,20 +723,14 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
     flex-flow: wrap;
     align-items: center;
 
-    &:hover {
+    &:hover,
+    // Override .mx_EventTile:not([data-layout=bubble]).mx_EventTile:hover .mx_EventTile_line
+    &:not([data-layout=bubble]):hover .mx_EventTile_line {
         background-color: $system;
     }
 
-    // To cancel "&.mx_EventTile:hover .mx_EventTile_line"
-    &:not([data-layout=bubble]):hover {
-        .mx_EventTile_line {
-            background-color: $system;
-        }
-
-        // Override .mx_EventTile:not([data-layout=bubble]):hover.mx_EventTile_verified .mx_EventTile_line
-        &.mx_EventTile_verified .mx_EventTile_line {
-            box-shadow: none; // don't show the verification left stroke in the thread list (data-shape=ThreadsList)
-        }
+    &:not([data-layout=bubble]):hover .mx_EventTile_line {
+        box-shadow: none; // don't show the verification left stroke in the thread list
     }
 
     &::after {
@@ -860,10 +854,6 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 
         &:not([data-layout=bubble]) {
             padding-top: $spacing-16;
-
-            &:hover .mx_EventTile_line {
-                box-shadow: none; // don't show the verification left stroke in a thread (mx_ThreadView)
-            }
         }
     }
 
