--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -241,28 +241,32 @@ limitations under the License.
         color: $secondary-content;
     }
 
+    &.mx_ThreadView .mx_EventTile {
     // handling for hidden events (e.g reactions) in the thread view
-    &.mx_ThreadView .mx_EventTile_info {
-        padding-top: 0 !important; // override main timeline padding
+    &.mx_EventTile_info {
+        padding-top: 0;
 
+        &.mx_EventTile_selected .mx_EventTile_line,
         .mx_EventTile_line {
-            padding-left: 0 !important; // override main timeline padding
+            padding-inline-start: 0;
 
             .mx_EventTile_content {
-                margin-left: 48px; // align with text
-                width: calc(100% - 48px - 8px); // match width of parent
+                width: auto;
             }
         }
 
         .mx_EventTile_avatar {
             position: absolute;
-            left: 30px !important; // override main timeline positioning
+            left: 30px;
             z-index: 9; // position above the hover styling
+            width: 14px; // avatar img size
+            height: 14px; // avatar img size
         }
 
         .mx_ViewSourceEvent_toggle {
             display: none; // hide the hidden event expand button, not enough space, view source can still be used
         }
+    }
     }
 
     .mx_BaseCard_footer {
