--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -821,6 +821,8 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 }
 
 .mx_ThreadView {
+    --ThreadView_group_spacing-start: 56px; // 56px: 64px - 8px (padding)
+
     display: flex;
     flex-direction: column;
     max-height: 100%;
@@ -889,7 +891,6 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
     }
 
     .mx_EventTile[data-layout=group] {
-        $spacing-start: 56px; // 56px: 64px - 8px (padding)
         width: 100%;
 
         .mx_EventTile_content,
@@ -900,7 +901,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         .mx_MLocationBody,
         .mx_ReplyChain_wrapper,
         .mx_ReactionsRow {
-            margin-left: $spacing-start;
+            margin-inline-start: var(--ThreadView_group_spacing-start);
             margin-right: 8px;
 
             .mx_EventTile_content,
@@ -943,7 +944,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         }
 
         .mx_EventTile_mediaLine {
-            padding-inline-start: $spacing-start;
+            padding-inline-start: var(--ThreadView_group_spacing-start);
         }
     }
 
