--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -192,7 +192,7 @@ limitations under the License.
     }
 
     .mx_GenericEventListSummary:not([data-layout=bubble]) > .mx_EventTile_line {
-        padding-inline-start: var(--ThreadView_group_spacing-start); // align the summary text with message text
+        padding-inline-start: var(--ThreadView_group_spacing-start); // align summary text with message text
     }
 
     .mx_EventTile:not([data-layout=bubble]) {
