--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -191,8 +191,13 @@ limitations under the License.
         }
     }
 
-    .mx_GenericEventListSummary:not([data-layout=bubble]) > .mx_EventTile_line {
+    .mx_GenericEventListSummary {
+        &[data-layout=bubble] > .mx_EventTile_line {
+            padding-left: 30px !important; // Override main timeline styling - align summary text with message text
+        }
+        &:not([data-layout=bubble]) > .mx_EventTile_line {
         padding-inline-start: var(--ThreadView_group_spacing-start); // align summary text with message text
+    }
     }
 
     .mx_EventTile:not([data-layout=bubble]) {
