.mx_UserInfo.mx_BaseCard.mx_UserInfo_smallAvatar
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_UserInfo.scss
+++ b/res/css/views/right_panel/_UserInfo.scss
@@ -278,9 +278,8 @@ limitations under the License.
             margin-bottom: 11px;
         }
     }
-}
 
-.mx_UserInfo.mx_BaseCard.mx_UserInfo_smallAvatar {
+&.mx_UserInfo_smallAvatar {
     .mx_UserInfo_avatar {
     .mx_UserInfo_avatar_transition {
         max-width: 72px;
