--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -89,10 +89,6 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         margin-left: 64px;
     }
 
-    &.mx_EventTile_info {
-        padding-top: 1px;
-    }
-
     .mx_EventTile_avatar {
         top: 14px;
         left: 8px;
@@ -100,9 +96,21 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         user-select: none;
     }
 
-    &.mx_EventTile_info .mx_EventTile_avatar {
-        top: $font-6px;
-        left: $left-gutter;
+    &.mx_EventTile_info {
+        padding-top: 0;
+
+        .mx_EventTile_avatar,
+        .mx_EventTile_e2eIcon {
+            top: 3px; // align with mx_EventTile_line
+        }
+
+        .mx_EventTile_avatar {
+            left: $left-gutter;
+        }
+
+        .mx_EventTile_line {
+            padding: 2px 0;
+        }
     }
 
     &.mx_EventTile_continuation {
