Add comment to explain origin of styles
Co-authored-by: Travis Ralston <travpc@gmail.com>

--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -303,6 +303,7 @@ legend {
     overflow-y: auto;
 }
 
+// Styles copied/inspired by GroupLayout, ReplyTile, and EventTile variants.
 .mx_Dialog .markdown-body {
     font-family: inherit !important;
     white-space: normal !important;
